--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         background: url('c.jpg');
         background-repeat: no-repeat;
         background-size: cover;
+        position: fixed;
+        width: 100%;
+        height: 100vh;
         color: aliceblue;
     }
 </style>
