--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         background-size: cover;
         position: fixed;
         width: 100%;
-        height: 100vh;
+        height: auto;
         color: aliceblue;
     }
 </style>
