--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         background: url('c.jpg');
         background-repeat: no-repeat;
         background-size: cover;
-        position: fixed;
+        /* position: fixed; */
         width: 100%;
         height: auto;
         color: aliceblue;
@@ -37,19 +37,20 @@
             </ul>
         </div>
         <div class="right">
-             <button class="bt"> CALL US</button>
-             <button class="bt"> KNOW MORE</button>
+            <button class="bt"> CALL US</button>
+            <button class="bt"> KNOW MORE</button>
         </div>
     </header>
     <div class="lo">
         <p><br><br></p>
     </div>
-        <section>
-            <!-- <h1>WELCOME TO MY GYM</h1> -->
-            <h2> ¨If we could give every individual the right amount of nourishment and exercise, not too little and not too much, we would have found the safest way to health.¨ — Hippocrates<span></span></h2>
-            <p>"NEVER GIVE UP"</p>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSeI7f2SYfrk8R5QlY1-b4XJ0hvNLa2rzbb2KniBOCOpBjbYEA/viewform?usp=pp_url " class="botton1" target="_blank">enroll now</a>
-            <h2 class="id">60% DISCOUNT ON FIRST ENROLLMENT</h2>
-        </section>
+    <section>
+        <!-- <h1>WELCOME TO MY GYM</h1> -->
+        <h2> ¨If we could give every individual the right amount of nourishment and exercise, not too little and not too much, we would have found the safest way to health.¨ — Hippocrates<span></span></h2>
+        <p>"NEVER GIVE UP"</p>
+        <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSeI7f2SYfrk8R5QlY1-b4XJ0hvNLa2rzbb2KniBOCOpBjbYEA/viewform?usp=pp_url " class="botton1" target="_blank">enroll now</a> -->
+        <a class="bt2" href="https://docs.google.com/forms/d/e/1FAIpQLSeI7f2SYfrk8R5QlY1-b4XJ0hvNLa2rzbb2KniBOCOpBjbYEA/viewform?usp=pp_url " target="_blank">ENROLL NOW</a>
+        <h2 class="id">60% DISCOUNT ON FIRST ENROLLMENT</h2>
+    </section>
 </body>
 </html>
